Change storage from LinkedList to ArrayList